[package]
name = "fantasy-util"
version = "0.1.3"
authors = ["jelipo <me@jelipo.com>"]
edition = "2018"
description = "Jelipo custom utils"
license-file = "LICENSE"
homepage = "https://github.com/jelipo/fantasy-util"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
