[package]
name = "fantasy-util"
version = "0.1.7"
authors = ["jelipo <me@jelipo.com>"]
edition = "2018"
description = "Jelipo custom utils"
license = "MIT"
homepage = "https://github.com/jelipo/fantasy-util"
repository = "https://github.com/jelipo/fantasy-util"
documentation = "https://docs.rs/fantasy-util"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

